fixed user display not showing selection bug
by changing CSS specificity on both div#user-display and
div#comp-display.

--- a/style.css
+++ b/style.css
@@ -122,7 +122,8 @@ div#user-display img {
     max-height: 100%;
 }
 
-div.window.framed img.show {
+div#user-display img.show,
+div#comp-display img.show {
     display: block;
 }
 
